--- a/arch/arm64/configs/crosshatch_defconfig
+++ b/arch/arm64/configs/crosshatch_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Alice-Ord"
+CONFIG_LOCALVERSION="-Sakiki-Extra"
 CONFIG_KERNEL_LZ4=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
