--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -1,3 +1,5 @@
+CONFIG_LOCALVERSION="-Sakiki-Extra"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZ4=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -100,6 +102,10 @@ CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=64
+CONFIG_INPUT_BOOST_FREQ_LP=825600
+CONFIG_INPUT_BOOST_FREQ_PERF=902400
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -338,9 +344,9 @@ CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_FTS=m
+CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_TOUCHSCREEN_FTM4=y
-CONFIG_TOUCHSCREEN_SEC_TS=m
+CONFIG_TOUCHSCREEN_SEC_TS=y
 CONFIG_TOUCHSCREEN_TBN=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
@@ -407,6 +413,7 @@ CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=y
 CONFIG_MFD_I2C_PMIC=y
 CONFIG_MFD_SPMI_PMIC=y
+CONFIG_MSM_CDC_PINCTRL=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
 CONFIG_REGULATOR_QPNP_LABIBB=y
@@ -514,6 +521,7 @@ CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_S2MPB04=y
 CONFIG_GOOGLE_WLAN_MAC=y
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
@@ -578,6 +586,7 @@ CONFIG_QCOM_COMMAND_DB=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
 CONFIG_MSM_EVENT_TIMER=y
+CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_PM=y
 CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
@@ -675,3 +684,30 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_XZ_DEC=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_CIRRUS_SPKR_PROTECTION=y
+CONFIG_MSM_ADSP_LOADER=y
+CONFIG_MSM_QDSP6_APRV2_GLINK=y
+CONFIG_MSM_QDSP6_NOTIFIER=y
+CONFIG_MSM_QDSP6_PDR=y
+CONFIG_MSM_QDSP6_SSR=y
+CONFIG_MSM_QDSP6V2_CODECS=y
+CONFIG_PINCTRL_WCD=y
+CONFIG_QTI_PP=y
+CONFIG_SND_HWDEP_ROUTING=y
+CONFIG_SND_SOC_CS35L36=y
+CONFIG_SND_SOC_CS35L36_I2S=y
+CONFIG_SND_SOC_CS35L36_TDM=y
+CONFIG_SND_SOC_MACHINE_SDM845=y
+CONFIG_SND_SOC_MACHINE_SDM845_MAX98927=y
+CONFIG_SND_SOC_MSM_HOSTLESS_PCM=y
+CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
+CONFIG_SND_SOC_MSM_STUB=y
+CONFIG_SND_SOC_QDSP6V2=y
+CONFIG_SND_SOC_SDM845=y
+CONFIG_SND_SOC_WCD934X=y
+CONFIG_SND_SOC_WCD9XXX_V2=y
+CONFIG_SND_SOC_WCD_SPI=y
+CONFIG_WCD9XXX_CODEC_CORE=y
+CONFIG_WCD_DSP_GLINK=y
+CONFIG_WCD_MICBIAS_USE_PULLUP=y
+CONFIG_WCD_SPI_AC=y
