--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Sakiki-Extra"
+CONFIG_LOCALVERSION="-Miya-Extra"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZ4=y
 # CONFIG_FHANDLE is not set
