b1c1: defconfig: Sakiki -> Nono
* Android S is coming soon, it’s time to change the version. (〃'▽'〃)

Change-Id: I3225c4659afdfc37bd1d87801a59109fe65a2020

--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Sakiki-Extra"
+CONFIG_LOCALVERSION="-Nono-Extra"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZ4=y
 # CONFIG_FHANDLE is not set
