--- a/.github/workflows/make_kernel.yml
+++ b/.github/workflows/make_kernel.yml
@@ -2,9 +2,11 @@ name: Build on Tag
 
 on:
   push:
-    branches: [ twrp-11.0 ]
+    branches: [ arrow-11.0 ]
   pull_request:
-    branches: [ twrp-11.0 ]
+    branches: [ arrow-11.0 ]
+  watch:
+    types: [started]
 
 jobs:
   build:
